syntax = "proto3";

package ToDoPackage;

service TodoService {
  rpc PingPong(PingRequest) returns (PongResponse) {}
}

message PingRequest {
  string message = 1;
}

message PongResponse {
  string message = 1;
}